# studies

./: .pre-commit-config.yaml  README.md  pyproject.toml
books/operationele_analyse/: lineaire_programmering.ipynb
src/studies/: __init__.py
