[project]
name = "studies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "gjjsuren@outlook.com" }
]
requires-python = ">=3.13.3"
dependencies = [
    "ipykernel>=6.29.5",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pre-commit>=4.2.0",
    "scipy>=1.15.2",
]

[project.scripts]
studies = "studies:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
